created: all site was created

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         </button>
       </div>
       <!-- /.input-group -->
+      <a href="#" class="menu-toggle" id="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </div>
     <!-- /.header-wrapper -->
   </header>
@@ -183,8 +188,54 @@
         </div>
       </section>
     </main>
-    <aside class="sidebar"></aside>
+    <aside class="sidebar">
+      <div class="user">
+        <a href="#" class="user-info">
+          <img width="40" height="40" src="img/avatar.jpg" alt="" class="user-avatar">
+          <span class="user-name">islamovartem</span>
+        </a>
+        <a href="#" class="exit">
+          <svg class="icon icon-exit">
+            <use xlink:href="img/icon.svg#exit"></use>
+          </svg>
+        </a>
+      </div>
+      <!-- /.user -->
+      <nav class="sidebar-nav">
+        <ul class="sidebar-menu">
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link">Ответы</a></li>
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link active">Коментарии</a></li>
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link">Оценки</a></li>
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link">Сохраненное</a></li>
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link">Подписки</a></li>
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link">Заметки</a></li>
+          <li class="sidebar-menu-item"><a href="#" class="sidebar-menu-link">Игнор-лист</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="button button-new-post">
+        <svg class="icon icon-fire">
+          <use xlink:href="img/icon.svg#fire"></use>
+        </svg>
+        Опубликовать пост
+      </a>
+      <div class="card">
+        <div class="card-header">
+          <h2 class="card-title">Коментарий дня</h2>
+        </div>
+        <div class="card-body">
+          <a href="#" class="card-body-title">Как обмануть банкомат, если вы хотите снять больше наличных</a>
+          <p class="card-text">
+            Таким образом укрепление и развитие структуры требуют от нас анализа форм развития. Не следует, однако забывать, что
+            реализация намеченных плановых заданий требуют от нас анализа позиций, занимаемых участниками в отношении поставленных
+            задач. Задача организации, в особенности же консультация...
+          </p>
+        </div>
+      </div>
+      <!-- /.card -->
+      <a href="#" class="promo"></a>
+    </aside>
   </div>
   <!-- /.content -->
+  <script src="js/main.js"></script>
 </body>
 </html>
